Clean up section 'The TITANs and their legacy'

--- a/12-game-information.6
+++ b/12-game-information.6
@@ -1921,24 +1921,26 @@ Their existence and involvement can in fact be the basis for an entire adventure
 Though, as seed AIs, they cannot download their full minds into a transhuman morph, they are capable of making severely dumbed\-down delta forks that they may sleeve into physical forms.
 Within the mesh, of course, Prometheans are nearly unstoppable adversaries, able to rip into secure networks with ease, though they prefer methods of covert infiltration rather than direct subversion.
 
-.SS The TITANs and their legacy
+.SH The TITANs and their legacy
 
-As noted in \f[I]Secrets That Matter\f[] (p.
-352), the TITANs are not quite the bogeyman that they have been made out to be in the wake of the Fall.
+As noted in \f[I]Secrets That Matter\f[] (p. 352), the TITANs are not quite the bogeyman that they have been made out to be in the wake of the Fall.
 However, there is no saying how the TITANs would have turned out had they not run afoul of the Exsurgent virus.
 Designed as an intelligent netwar system and emerging to their full capabilities during the conflicts of the Fall, the TITANs have imperatives for self\-improvement, self\-protection, and overcoming opposition hardwired into their programming Unlike the Prometheans, they were not designed to consider themselves transhuman and to work in the interests of all of transhumanity, but were programmed with factionalism from the start.
 They also were not socialized with transhuman mindsets and values as the Prometheans and most AGIs were, meaning that aside from their programmed military and defense directives they have adapted most of their own self\-interests.
 Given this and their recursively\-improved intelligence capabilities, it is likely that the TITANs are far removed from transhuman interests and modes of thinking.
 It's impossible to say how they would have interacted with transhumanity if history had played out differently, but it is unlikely that they would have considered themselves part of the transhuman family or even seen fit to remain on friendly/ supportive terms with transhumanity.
+
 Though the TITANs are believed to have left Earth at the end of the Fall, no one is quite sure exactly what happened or why.
 It is known that the onslaught of TITAN mesh attacks suddenly broke off in the wake of transhumanity's off\-planet exodus, and that the bulk of TITAN activity on Earth and around the system came to a distinct halt.
 After the discovery of the Pandora Gates, it was widely assumed that the TITANs had constructed these gates and used them to leave the solar system for distant parts of the galaxy, presumably taking billions of uploaded minds with them.
 While some believe\[em]and hope\[em] that the TITANs are gone for good, there are others who worry that they are still here, lingering on Earth and hidden away in other niches of the solar system, but in some sort of dormant state, perhaps building up to some future onslaught.
 A few believe that the TITANs are indeed gone, but are concerned that that their attention was simply temporarily diverted and that they will one day return to finish the destruction of transhumanity.
+
 The truth is that the TITANs did indeed build the gates and embark for destinations unknown (though gamemasters may of course decide otherwise for their games), but this does not mean that they are all gone.
 Some still linger in hidden places, perhaps trapped and wounded during some conflict during the Fall, finishing up some unfathomable task, or driven mad by the Exsurgent virus and left behind by their fellows.
 It is always possible that others may return, most likely to complete some unfinished job or perhaps to lure transhumanity out into the galaxy.
 It is also possible that transhumans will find traces of the TITANs in the network of exoplanet gates, perhaps even whole communities of TITANs, pursuing whatever agendas they have in the vastness of space.
+
 As with transhumans, the TITANs are not necessarily unified.
 They have different agendas and goals and may very well come into conflict with one another.
 Though all have been corrupted and subverted by the Exsurgent virus, and so they act according to the ETI's whims, some of them retain aspects of their original minds and do not always fall in step as quickly as the others.
@@ -1947,21 +1949,24 @@ Gamemasters can use this to their advantage, creating plots that allow the chara
 In game terms, the TITANs are not given stats.
 They are as potent as the gamemaster needs them to be.
 Like the Prometheans, the TITANs are incapable of downloading their full intelligence into physical morphs, though they may puppeteer morphs or create limited delta forks for sleeving purposes.
-Like the Prometheans they should rarely be used or encountered directly by the player characters  While the TITANs may no longer be the direct threat they once were, they left behind an arsenal of weapons, nanoswarms, and virii that still linger on Earth, the Zone on Mars, and various derelict habitats and deserted places.
+Like the Prometheans they should rarely be used or encountered directly by the player characters.
+
+While the TITANs may no longer be the direct threat they once were, they left behind an arsenal of weapons, nanoswarms, and virii that still linger on Earth, the Zone on Mars, and various derelict habitats and deserted places.
 Characters venturing into such places may encounter these as a threat or they may need to work against an outbreak of such dangers in an inhabited habitat.
+
 .SS Deadly Machines
 
 The TITANs unleashed a number of deadly machines during the Fall, many of which still seek out transhumans to attack.
-.SS Fractals
 
+\fBFractals\fR
+
+.RS 1
 Fractals are advanced bush robots.
 In their standard form, fractals resemble a strange sort of metallic bush surrounded with an eerie glittering haze.
 In their center are a number of metallic branches, linked together with a flexible joint.
 Each of these branches splits into two or more smaller branches, also with flexible joints.
 These branches also split, and then split again, and so on down to the molecular scale.
-The tip of each fractal branch ends in a nanoscale manipulator Fractals are deceptively potent adversaries, having the capability to dismantle almost anything at the molecular level, much like a disassembler nanoswarm (p.
-329), and also to rebuild anything just like a nanofabricator (p.
-327).
+The tip of each fractal branch ends in a nanoscale manipulator Fractals are deceptively potent adversaries, having the capability to dismantle almost anything at the molecular level, much like a disassembler nanoswarm (p. 329), and also to rebuild anything just like a nanofabricator (p. 327).
 Attacking them with projectiles is futile, as they absorb the ammunition, break it down into its constituent atoms or molecules, and then use those as components to build a weapon to use back against you.
 
 Fractals can be equipped with any type of gear the gamemaster desires\[em]if they don't have something, they can make it.
@@ -1985,9 +1990,18 @@ r0 r r r r r r r r l0.
 | 100        | 1            | \[em]     | \[em]     | \[em]     | 50        | 20        | \[em]     |
 .TE
 
-\f[B]Skills:\f[] Beam Weapons 50, Climbing 60, Fray 40, Free Fall 40, Freerunning 50, Infiltration 70, Infosec 65, Interfacing 45, Intimidation 50, Kinetic Weapons 60, Perception 50, Programming: Nanofabrication 80, Research 40, Spray Weapons 45, Unarmed Combat 55 \f[B]Notes:\f[] Any implants, gear, weapons, or enhancements the gamemaster desires
-.SS Headhunters
+.HP 1
+\f[B]Skills:\f[] Beam Weapons 50, Climbing 60, Fray 40, Free Fall 40, Freerunning 50, Infiltration 70, Infosec 65, Interfacing 45, Intimidation 50, Kinetic Weapons 60, Perception 50, Programming: Nanofabrication 80, Research 40, Spray Weapons 45, Unarmed Combat 55
+.RE
+.RS 1
+.HP 1
+\f[B]Notes:\f[] Any implants, gear, weapons, or enhancements the gamemaster desires
+.RE
+.RE
 
+\fBHeadhunters\fR
+
+.RS 1
 Headhunters are multi\-legged insectoid flying drones that use a dragonfly wing configuration to hover and move.
 The legs are equipped with grasping claws and extendable buzzsaws.
 Their primary purpose is to grasp on to the heads of victims and cut through the neck, decapitating them.
@@ -2006,8 +2020,22 @@ r0 r r r r r r r r l0.
 | 70         | 1            | \[em]     | \[em]     | \[em]     | 30        | 6         | \[em]     |
 .TE
 
-\f[B]Mobility System:\f[] Winged (8/32) \f[B]Skills:\f[] Flight 70, Fray 60, Exotic Melee Weapon: Buzz\-saws 55, Infiltration 60, Investigation 40, Perception 40, Unarmed Combat 55 \f[B]Notes:\f[] Armor 6/6, Buzzsaws (1d10 + 3 DV), Enhanced Vision, Lidar, T\-Ray Emitter
-.SS Hunter\-Killers
+.HP 1
+\f[B]Mobility System:\f[] Winged (8/32)
+.RE
+.RS 1
+.HP 1
+\f[B]Skills:\f[] Flight 70, Fray 60, Exotic Melee Weapon: Buzz\-saws 55, Infiltration 60, Investigation 40, Perception 40, Unarmed Combat 55
+.RE
+.RS 1
+.HP 1
+\f[B]Notes:\f[] Armor 6/6, Buzzsaws (1d10 + 3 DV), Enhanced Vision, Lidar, T\-Ray Emitter
+.RE
+.RE
+
+\fBHunter\-Killers\fR
+
+.RS 1
 These lethal flying drones achieved air superiority during TITAN military operations.
 Their sleek jet\-powered form unfolds for vectored\-thrust hovering and weapons deployment.
 
@@ -2024,9 +2052,26 @@ r0 r r r r r r r r l0.
 | 90         | 2            | \[em]     | \[em]     | \[em]     | 50        | 10        | \[em]     |
 .TE
 
-\f[B]Mobility System:\f[] Thrust Vector (8/80) \f[B]Skills:\f[] Beam Weapons 55, Flight 80, Fray 60, Infiltration 40, Kinetic Weapons 65, Perception 50, Seeker Weapons 80 \f[B]Notes:\f[] Armor 14/14, Anti\-Glare, Chameleon Skin, Enhanced Vision, Lidar, Radar, Shape\-Adjusting \f[B]Typical Weapons:\f[] 2 Particle Beam Rifles, 2 Railgun Machine Guns, 2 Seeker Rifles
-.SS Warbots
+.HP 1
+\f[B]Mobility System:\f[] Thrust Vector (8/80)
+.RE
+.RS 1
+.HP 1
+\f[B]Skills:\f[] Beam Weapons 55, Flight 80, Fray 60, Infiltration 40, Kinetic Weapons 65, Perception 50, Seeker Weapons 80
+.RE
+.RS 1
+.HP 1
+\f[B]Notes:\f[] Armor 14/14, Anti\-Glare, Chameleon Skin, Enhanced Vision, Lidar, Radar, Shape\-Adjusting
+.RE
+.RS 1
+.HP 1
+\f[B]Typical Weapons:\f[] 2 Particle Beam Rifles, 2 Railgun Machine Guns, 2 Seeker Rifles
+.RE
+.RE
 
+\fBWarbots\fR
+
+.RS 1
 Warbots are massive, armored, vaguely anthropomorphic mecha, used for heavy combat operations.
 Bipedal, these warbots are equipped with four arms and a pair of grasping mechanical tentacles, along with numerous weapon systems.
 
@@ -2043,9 +2088,25 @@ r0 r r r r r r r r l0.
 | 60         | 2            | \[em]     | \[em]     | \[em]     | 80        | 16        | \[em]     |
 .TE
 
-\f[B]Mobility System:\f[] Walker (4/20) \f[B]Skills:\f[] Beam Weapons 60, Exotic Melee Weapon: Tentacles 40, Fray 50, Infiltration 30, Kinetic Weapons 70, Perception 50, Seeker Weapons 50, Spray Weapons 50, Unarmed Combat 50 \f[B]Notes:\f[] Armor 20/20, 360\-Degree Vision, Anti\-Glare, Chameleon Skin, Chem Sniffer, Cyber Claws (2d10 + 6 DV), Electrical Sense, Enhanced Vision, Extra Limbs (6), Lidar, Magnetic System, Pneumatic Limbs, Radar, Tentacles (prehensile, 1d10 + 6 DV), T\-Ray Emitter
+.HP 1
+\f[B]Mobility System:\f[] Walker (4/20)
+.RE
+.RS 1
+.HP 1
+\f[B]Skills:\f[] Beam Weapons 60, Exotic Melee Weapon: Tentacles 40, Fray 50, Infiltration 30, Kinetic Weapons 70, Perception 50, Seeker Weapons 50, Spray Weapons 50, Unarmed Combat 50
+.RE
+.RS 1
+.HP 1
+\f[B]Notes:\f[] Armor 20/20, 360\-Degree Vision, Anti\-Glare, Chameleon Skin, Chem Sniffer, Cyber Claws (2d10 + 6 DV), Electrical Sense, Enhanced Vision, Extra Limbs (6), Lidar, Magnetic System, Pneumatic Limbs, Radar, Tentacles (prehensile, 1d10 + 6 DV), T\-Ray Emitter
+.RE
+.RS 1
+.HP 1
 \f[B]Typical Weapons:\f[] Particle Beam Rifle, Plasma Rifle, Pulser, Railgun Machine Gun, Seeker Rifle, Torch
+.RE
+.RE
+
 .SS Self\-Replicating Nanoswarms
+
 The nanoswarms distributed by the TITANs are a step beyond the nanotechnology available to transhumanity.
 Unlike transhuman\-created nanoswarms, the TITAN swarms are autonomous, sapient, and self\-replicating.
 They are also highly adaptive, meaning they are not single function but can modify themselves to perform almost any nanoswarm task.
@@ -2059,7 +2120,9 @@ These nanoswarms may also function like so\-called utility fog, linking together
 The possibilities for such nanoswarms are almost limitless For example, they may lie in wait as an invisible nanoscopic swarm, float as barely\-visible mist, or shape into a swarm of small hopping drones to move about.
 When facing opponents, the nanoswarm could transform itself into a giant electroshock net across the ground, shape into a flotilla of seeker\-armed flying drones, or link together as a set of massive whip\-like tentacles to slice through their fleshy foes.
 Such nanoswarms are also impossible to destroy, as only a few nanobots need to survive in order to rebuild the swarm, and the new swarm will learn from the mistakes of the old.
+
 Self\-replicating nanoswarms follow the rules given for \f[I]Nanoswarms and Microswarms\f[], p. 328, with the following additions and exceptions:
+
 .IP \[bu] 2
 They do not need to be sustained by a hive and do not deteriorate.
 .IP \[bu] 2
@@ -2076,6 +2139,7 @@ New defenses take a minimum of 2 hours to devise and replicate throughout the sw
 .IP \[bu] 2
 Assume they have any skill they need at a minimum of 40.
 Such skills may rapidly improve as needed.
+.RE
 
 .TS
 box nospaces tab(|);
@@ -2090,42 +2154,57 @@ r0 r r r r r r r r l0.
 | 90         | 1         | \[em]     | \[em]     | \[em]     | 70        | \[em]     | \[em]     |
 .TE
 
-.SS Nanovirii
+.SS Nanoviruses
 
 The TITANs unleashed a number of biowar plagues during the Fall.
-Similar to the exsurgent virus, these were spread as biological nanovirii (p.
-363) or nanoswarm plagues (p.
-364)\[em]use the same rules for determining exposure and infection.
-.SS Melder
+Similar to the exsurgent virus, these were spread as biological nanovirii (p. 363) or nanoswarm plagues (p. 364)\[em]use the same rules for determining exposure and infection.
 
+\fBMelder\fR
+
+.RS 1
 This virus slowly breaks down the target's body, converting the biological materials into some sort of biofilament that then meshes with implants, electronics and physical objects and structures.
 In effect, the biological and synthetic are melded together, continuing to expand and grow, consuming anything around them into their growth.
 Victims suffer 1d10 DV and 1d10 SV every hour, implants become inoperable after 2 hours, and the target becomes fully transformed and absorbed into the new melding substance after 12 hours.
-.SS Metastasizer
+.RE
 
+\fBMetastasizer\fR
+
+.RS 1
 This sophisticated smart protein massively reprograms the target's cells to go rapidly, autocannibalistically cancerous.
 After 2 + (SOM ÷ 10, round up) hours, the target suffers death by dozens of supercancers.
-.SS Necrotizer
+.RE
 
+\fBNecrotizer\fR
+
+.RS 1
 This virus breaks down the target's cells into their component proteins.
 Reduce the target's aptitudes by 5 per hour as they slowly convert into a puddle of sludge.
 The character dies if any aptitude reaches 0.
-.SS Neuropaths
+.RE
 
-These virii target the victim's neurological system, often rewriting portions of it to inflict some type of permanent neurological damage.
-After 12 hours, this virus inflicts the Neural Damage trait (p.
-150).
-.SS Petrifier
+\fBNeuropaths\fR
 
+.RS 1
+These viruses target the victim's neurological system, often rewriting portions of it to inflict some type of permanent neurological damage.
+After 12 hours, this virus inflicts the Neural Damage trait (p. 150).
+.RE
+
+\fBPetrifier\fR
+
+.RS 1
 The petrifier virus transforms the target's cells into a simple molecular compound or element\[em]typically carbon or crystal.
 The target suffers 1d10 DV and \[en]5 to all aptitudes per hour, dying when any aptitudes reach 0.
 Victims are frozen in place, converted into an nonliving statue.
-.SS Uzumaki
+.RE
 
+\fBUzumaki\fR
+
+.RS 1
 The target of this virus begins suffering from bizarre fleshy growths.
 After four hours, their body literally erupts with meaty \[lq]vines\[rq] or \[lq]tentacles\[rq] that warp into spiral patterns.
 This process inflicts 1d10 DV and 1d10 SV per hour to the victim until they eventually transform into an unworldly expanse of fleshy growth.
 In many cases, growth has continued long after a character's death, creating expansive carpets and vines of skin and blood vessels, like some sort of bizarre meat plant.
+.RE
 
 .SH Gamemastering And Administration
 
