Clean up section 'Gamemastering and Administration'

--- a/12-game-information.6
+++ b/12-game-information.6
@@ -2206,9 +2206,10 @@ This process inflicts 1d10 DV and 1d10 SV per hour to the victim until they even
 In many cases, growth has continued long after a character's death, creating expansive carpets and vines of skin and blood vessels, like some sort of bizarre meat plant.
 .RE
 
-.SH Gamemastering And Administration
+.SH Gamemastering and Administration
 
 The following advice will assist gamemasters in running their games more efficiently.
+
 .SS Awarding Rez Points
 
 In \f[I]Eclipse Phase,\f[] characters earn Rez Points in order to advance (see \f[I]Character Advancement,\f[] p. 152).
@@ -2221,6 +2222,7 @@ If a scenario goes shorter or longer, the Rez Point awards should be adjusted ac
 In the case of long\-term campaigns, the gamemaster should break down the action into digestible chunks, or \[lq]chapters,\[rq] and assign Rez Points after each such segment.
 
 Every character should be awarded 1 Rez Point for each of the following criteria that is met:
+
 .IP \[bu] 2
 The character participated in that scenario.
 .IP \[bu] 2
@@ -2240,14 +2242,14 @@ The player significantly contributed to the session's drama, humor, or fun with 
 
 This should result in an average Rez Points award of 4\[en]7 points per character, per adventure.
 Gamemasters who wish to drive the characters' advancement forward more quickly can increase the reward amounts.
-.SS Reputation Gain And Loss
+
+.SS Reputation Gain and Loss
 
 In addition to awarding Rez Points, the gamemaster should also adjust each character's Rep scores according to actions they took during game play, according to the guidelines below.
 For simplicity, these can be applied at the end of the adventure, though gamemasters who seek a more dynamic game could apply changes to the characters' Rep scores in game, as their peers judge them according to their actions (or lack thereof) and news about them in real time.
 Rep scores should only be modified according to public actions and interactions the character has with people capable of pinging their Rep with positive or negative feedback.
 Actions that happen in secret, without anyone ever knowing, should have no effect.
-Likewise, pissing off a Factor or a brinker isolate who never communicates with outsiders isn't going to matter because no one else will ever hear of it (unless the character lifelogs it and posts it to the mesh later ...
-).
+Likewise, pissing off a Factor or a brinker isolate who never communicates with outsiders isn't going to matter because no one else will ever hear of it (unless the character lifelogs it and posts it to the mesh later ...).
 Note that Rep modifications only apply to Rep scores tied to the character's known identity.
 
 Note that characters may gain and lose Rep score in networks they don't actively participate in.
@@ -2260,8 +2262,10 @@ Rep changes provide an excellent way for gamemasters to include more roleplaying
 Social networks are a two\-way street, meaning that members of the character's social networks might contact them for equipment, favors, and information during game play for things that are completely unrelated to the mission the character is on.
 A character who ignores such requests risks losing Rep.
 Fulfilling such requests may gain the character Rep and may also provide comic relief or even plant some plot hooks for the next scenario.
-.SS Reputation Gains
 
+\fBReputation Gains\fR
+
+.RS 1
 Rep awards are given for characters who help people out, benefit a faction, do something creative, make a major discovery or strides in a particular area of activity, pull off successful publicity stunts, win a competition, and so on.
 Some suggested examples are noted here:  \f[B]Trivial Award (1\[en]2 points):\f[] Do a Level 1 favor, make a moderate contribution to free/open source projects, throw a good party, make your sales quota, do the job no one else wants to do.
 
@@ -2272,8 +2276,11 @@ Some suggested examples are noted here:  \f[B]Trivial Award (1\[en]2 points):\f[
 \f[B]Major Award (7\[en]8 points):\f[] Do a Level 4 favor, design the new tool everyone wants, throw an impressive planetoid\-scale event, complete an extensive project (1 month work or 1 week of difficult/ specialized work), risk death.
 
 \f[B]Extreme Award (9\[en]10 points):\f[] Do a Level 5 favor, start this year's hot fashion trend, make a major scientific discovery, close the deal on a major corporate acquisition start (or put down) a revolution, complete a major project (1 year work or 1 month difficult/ specialized work), risk true death.
-.SS Reputation Losses
+.RE
 
+\fBReputation Losses\fR
+
+.RS 1
 Rep losses are suffered by characters who fail to render aid when needed, lose professional credibility, make major or public blunders, doublecross their friends, and so on.
 Some suggested examples are noted here:  \f[B]Trivial Loss (\[en]1 or \[en]2 points):\f[] Fail to do a Level 1 favor, inconvenience others, be involved in professional dispute, ruin someone's day, never are available.
 
@@ -2284,13 +2291,16 @@ Some suggested examples are noted here:  \f[B]Trivial Loss (\[en]1 or \[en]2 poi
 \f[B]Major Loss (\[en]7 or \[en]8 points):\f[] Fail to do a Level 4 favor, screw up a major mission or activity, endanger someone's life, associate with hated rivals.
 
 \f[B]Extreme Loss (\[en]9 or \[en]10 points):\f[] Fail to do a Level 5 favor, botch a major mission or activity spectacularly, betray a faction to its rivals or enemies.
-.SS Backups, Record\-Keeping, And Save Points
+.RE
+
+.SS Backups, Record\-Keeping, and Save Points
 
 Thanks to cortical stacks and archived backups, characters in \f[I]Eclipse Phase\f[] can recover from death.
 When restoring a character from an earlier backup, however, it is important to be able to know what the state of the character was as of that backup.
 Any Rez Points gained or spent, any character advancements made, any key information or memories acquired since that backup was made are lost.
 This means that in terms of game stats, resorting to an old backup can mean loss of a character's hard\-earned advancements\[em]that's the trade\-off for being effectively immortal.
-Since these changes can have a serious effect on game play, it's important to conduct accurate record\-keeping This sort of bookkeeping isn't hard, and there are two ways to do it.
+Since these changes can have a serious effect on game play, it's important to conduct accurate record\-keeping.
+This sort of bookkeeping isn't hard, and there are two ways to do it.
 The first is to simply make a copy of a the character's record sheet any time a character makes an archived backup, forks off an alpha or beta copy, or dies (thus freezing the cortical stack backup).
 Each of these is considered a \[lq]save point.\[rq] In this case, carefully note the date and time (both in character and out of character), and what the event was that prompted the backup.
 Since what knowledge a character knows at different points in their life may be important, you may also want to note what important information they may hold in their head, as well as what the recent events in their life were (to help jog your memory later).
@@ -2300,9 +2310,10 @@ Alternately, you can keep a log of all of your character's developments, noted b
 These developments would include: Rez Points spent or earned, character advancements made, key information acquired, backups made, alpha or beta forks made, and so on.
 In this case, if the character dies and reverts back to an earlier backup, it is easy to see what changes need to be \[lq]rolled back\[rq] to get back to that previous version of the character.
 When alpha and beta forks are made, you may also want to branch off a separate log for each fork, as their life stream may develop differently than from the original character they were spun off from.
-.RS
 
-\f[B]NPCS AND MOXIE\f[]  When a gamemaster is generating or winging NPCs that the characters interact or fight with, the question of Moxie for NPCs must be addressed.
+.SS NPCs and Moxie
+
+When a gamemaster is generating or winging NPCs that the characters interact or fight with, the question of Moxie for NPCs must be addressed.
 When it comes to run\-of\-the\-mill grunt NPC characters, we recommend that such NPCs don't be given Moxie.
 The reasons for this are simple.
 For one, it is one less stat/headache for the gamemaster to keep track of.
@@ -2310,17 +2321,20 @@ More importantly, however, it represents the edge that player characters have ov
 When it comes to major NPCs, however\[em]prime antagonists, key allies, etc.\[em] these characters should have their own Moxie score.
 Because such NPCs play pivotal roles in a scenario, it is important for them to be able to alter the outcome of events in much the same way the player characters can.
 It also allows a gamemaster to counteract an unfortunate roll of the dice that might otherwise spoil the big climax you have worked so hard to set up.
-.RE
+
 .SS Gamemastering Practicalities
 
 \f[I]Eclipse Phase\f[] is a game about a dark future in which the meaning of (trans)humanity and its very survival are at stake.
 In practice, however, your campaign can take on a wide assortment of flavors or even mix several styles together.
 There's nothing that says you have to play \f[I]Eclipse Phase\f[] specifically according to the guidelines we set out.
 This section covers topics you should think about while preparing a campaign and running it, to help you do things the way that makes you and your players happiest.
-.SS Gamemaster Responsibilities
 
+\fBGamemaster Responsibilities\fR
+
+.RS 1
 The gamemaster has certain responsibilities that will keep a game flowing smoothly.
 The following is a short summary of the basics.
+
 .IP \[bu] 2
 The gamemaster should be familiar with the whole game.
 This doesn't mean the rulebook must be memorized.
@@ -2343,14 +2357,21 @@ If you roll terribly for your major antagonist at the height of the story and th
 Be flexible and improvise in such situations.
 Your players are smart and perceptive and will know when you're forcing a situation with unfair tactics.
 At the same time, they'll also know when you've stepped up and run with the flow\[em]and they'll thank you for it.
-.SS Fundamentals
+.RE
+.RE
 
+\fBFundamentals\fR
+
+.RS 1
 It's possible to stumble into a campaign without ever really making an effort to find out what everyone wants, shooting into the darkness and happening to score a bullseye, but it's not a very reliable way to go.
 Successful campaigns usually begin with communication As you begin to prepare your campaign, talk to your players.
 Explain the basics of the \f[I]Eclipse Phase\f[] setting and let them look over the options for characters and tell you what they find interesting.
 Also take note of what they find uninteresting or even repellent, so that nobody wastes a lot of time getting set for options that simply won't be enjoyable in play.
-.SS Challenges To Players
+.RE
 
+\fBChallenges To Players\fR
+
+.RS 1
 \f[I]Eclipse Phase\f[] is set in a time of catastrophic troubles and looming disasters, and it's full of facts and concepts that may be heady or even uncomfortable to some players\[em]not to mention their characters.
 One of the fundamental questions for each gaming group is, how much challenge to the players' sense of comfort is a good idea?
 There is no single answer, because tastes vary.
@@ -2374,8 +2395,11 @@ If you know that one of them is, for instance, genuinely phobic about spiders, y
 You can also ruin a player's enjoyment of the session or the whole campaign that way, if it comes unexpectedly and leads to the real\-world fear drowning out the experience of play.
 Some players are fine with judicious use of their vulnerabilities, and others just aren't.
 Under no circumstances should you poke at weak spots without making sure you've discussed it first.
-.SS The Problem Of Secrets
+.RE
 
+\fBThe Problem of Secrets\fR
+
+.RS 1
 Uncovering secrets is a big part of this game.
 There's a problem, however, in that a lot of the secrets are out there where players can come across them: in this very chapter, in reviews of the game, discussion in online forums, and so on.
 As gamemaster, you will need to decide how you want to deal with the potential for spoiled revelations.
@@ -2414,8 +2438,11 @@ It's hard to guess what friends will say and impossible to predict the range of 
 (This particular answer is one that's unlikely to appear in anyone's campaign, but it makes a handy example for your conversational use precisely because it's extreme.
 So their answers to it are likely to be about the same as to any other potentially extreme change, and this one probably doesn't give away any of your own plans.) Some players are flexible on most matters but have particular points of attachment; if yours are among them, ask them to explain what those points are for them, so that you can keep them in mind.
 Other players have a hard time having fun with any major shift from published standard answers, and if you have players like that, you'll want to know it so that you can see how to adapt your plans to work within that framework.
-.SS That's What I'm Talking About: Shared Inspiration
+.RE
 
+\fBThat's What I'm Talking About: Shared Inspiration\fR
+
+.RS 1
 It's not quite true that everything changed from the early 21st century to \f[I]Eclipse Phase's\f[] universe, but a great many things did, and it can be hard to keep track of them all at once.
 This is where shared inspirations can come in handy.
 One striking illustration can convey a lot of details for both foreground and background, suggesting an aesthetic standard for design, an exotic environment, people doing futuristic tasks with appropriately advanced tools, and so on.
@@ -2423,15 +2450,15 @@ A prose passage from a rewarding novel may set an ambiance or nail down some asp
 
 There are potential pitfalls, and it's important to be aware of them.
 The greatest is obsolescence, the meaning of something evocative changing because the players' reality has changed since the inspiration entered it.
-William Gibson's ground\-breaking cyberpunk novel \f[I]Neuromancer\f[] begins, “The sky above the port was the color of television, tuned to a dead channel Supporting details make it clear that this is an industrial port at night, the sky gray from pollution and flecked with ash and other debris.
+William Gibson's ground\-breaking cyberpunk novel \f[I]Neuromancer\f[] begins, \[lq]The sky above the port was the color of television, tuned to a dead channel.\[rq]
+Supporting details make it clear that this is an industrial port at night, the sky gray from pollution and flecked with ash and other debris.
 But that was an image published in 1984.
 A decade and a half later, Neil Gaiman pointed out that to his children, the color of television tuned to a dead channel is bright blue, thanks to ubiquitous cable delivery.
 In another decade, the default color of a station not in use may be something else entirely.
 The moral is that it's not enough to agree that an image is very striking.
 You'll want to make sure that you all agree on what it is about it that's striking, to avoid a tangle of misconceptions that could derail play later on.
 
-The References page (p.
-394) offers a wide range of immediately relevant inspirations, but it's not the final word on the subject.
+The References page (p. 394) offers a wide range of immediately relevant inspirations, but it's not the final word on the subject.
 If the people in your group have a long\-time favorite space scene, or description of life in the midst of a high\-tech investigation, or poetic glimpse of what it might feel like to modify the body in ways not possible in real life, or something else that's stayed with them a long time and seems like it might bear on your campaign, encourage them to share.
 Remember to be courteous with each other's personal treasures, whether you end up using them or not; there's nothing like earned trust to encourage more sharing.
 
@@ -2440,8 +2467,11 @@ For instance, think of a corridor on a typical spaceship or habitat in \f[I]Ecli
 Did you imagine it as well lit even when not in use, lit well when sensors show people present and otherwise dim or dark, or perhaps planned to be well lit but in practice haphazard and unreliable thanks to lack of maintenance and funds?
 Did you imagine its surfaces smooth and clean, with equipment, maintenance bays, and the like all behind hatches and covers, or was it cluttered and lumpy?
 None of that matters all the time, but when it comes to the investigation of a derelict, the hunt for someone (or something) trying to hide, a race against time, or other dramatic complication, these things could affect your play, and rather than try to tally all possible contingencies in advance, having some general\-purpose references can save everyone time and confusion.
-.SS Things That Should Not Be: Horror
+.RE
 
+\fBThings That Should Not Be: Horror\fR
+
+.RS 1
 The universe of \f[I]Eclipse Phase\f[] is a time of horrors unleashed.
 Every character has had to come to some personal accommodation with the existence of things that offend our basic expectations of decency and practicality all at once.
 Horror comes in many flavors, and no one campaign can make use of all of them.
@@ -2476,10 +2506,15 @@ Make the break long enough for everyone to get the giggles out and then continue
 At the end of the day, through communication with their players, the gamemaster will know how much horror their group wishes to encounter.
 A group may decide that they want to be 100 percent immersed into the various horrors of \f[I]Eclipse Phase.\f[] Another group, however, may decide that while they enjoy the meshed theme of horror with the other aspects of \f[I]Eclipse Phase,\f[] they don't wish it to be a principal element.
 In such a situation, horror would remain just that, a theme, while the plots woven by the gamemaster would spin around the myriad of other elements that make up the game.
-.SS Transhumanism
+.RE
 
+\fBTranshumanism\fR
+
+.RS 1
 Humanity has embraced transhumanism for survival, harnessing science and technologies to catapult physical and mental faculties to super\-human levels, while eradicating involuntary death and enabling near immortality through the digitization of consciousness and the ability to transfer bodies at will.
-This is one of the cornerstone themes of \f[I]Eclipse Phase.\f[]  The technologies inherent to a transhuman future raise many questions and ethical issues, however, and these are some of the central themes that \f[I]Eclipse\f[] \f[I]Phase\f[] seeks to explore.
+This is one of the cornerstone themes of \f[I]Eclipse Phase.\f[]
+
+The technologies inherent to a transhuman future raise many questions and ethical issues, however, and these are some of the central themes that \f[I]Eclipse\f[] \f[I]Phase\f[] seeks to explore.
 We encourage both gamemaster and players to play around with the possibilities and contradictions enabled in such a universe.
 How do our mindsets change when death no longer looms over us?
 What does identity mean when our bodies are disposable and our personalities can be edited?
@@ -2489,3 +2524,4 @@ How do we ensure public safety in a world where technology makes weapons of mass
 How do ideas inherent to religious and spiritual thought cope with AI, backups, or resleeving What does it mean to be an uplifted animal in a society centered on humans?
 Who decides our future?
 These are just a few of the issues that \f[I]Eclipse Phase\f[] raises, and many of them can be used as the central theme for an entire campaign.
+.RE
